--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.10"
+    ext.kotlin_version = "1.9.20"
     ext.mockitoInlineVersion = '4.0.0'
     ext.coreTestingVersion = '2.1.0'
     ext.mockitoKotlinVersion = '4.0.0'
@@ -12,13 +12,16 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.2"
-        classpath("com.google.dagger:hilt-android-gradle-plugin:2.38.1")
+        classpath 'com.android.tools.build:gradle:8.1.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.7.7"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+}
+
+plugins {
+    id 'com.google.dagger.hilt.android' version '2.48.1' apply false
 }
 
 task clean(type: Delete) {
