--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.0'
 
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+
+    implementation "androidx.recyclerview:recyclerview:1.3.2"
 }
 
 apply plugin: 'org.jetbrains.kotlin.android'
