--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,12 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
 
     implementation "androidx.recyclerview:recyclerview:1.3.2"
+
+    // Room components
+    implementation "androidx.room:room-runtime:2.6.1"
+    kapt "androidx.room:room-compiler:2.6.1"
+    implementation "androidx.room:room-ktx:2.6.1"
+    androidTestImplementation "androidx.room:room-testing:2.6.1"
 }
 
 apply plugin: 'org.jetbrains.kotlin.android'
